# std-next

./: CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: audit.yml  ci.yml  publish.yml
src/: convert.rs  default.rs  iter.rs  lib.rs  macros.rs  mem.rs  ptr.rs  slice.rs  str.rs  string.rs  sync.rs  vec.rs
tests/: assert.rs  coverage.rs
